fixing alignfull containers in backend with sidebar closed

--- a/src/blocks/block-column-container/styles/editor.scss
+++ b/src/blocks/block-column-container/styles/editor.scss
@@ -70,6 +70,38 @@
 	margin: 0px auto;
 }
 
+@media only screen and (min-width: 1200px) {
+
+	/* full width container */
+	.edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .c9-grid .container-fluid[data-align="full"] {
+		max-width: 100vw;
+	}
+
+	.edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .c9-grid.p-5 .container-fluid[data-align="full"] {
+		min-width: calc(1440px - 6rem);
+	}
+
+	.edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .c9-grid.p-4 .container-fluid[data-align="full"] {
+		min-width: calc(1440px - 3rem);
+	}
+
+	.edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .c9-grid.p-3 .container-fluid[data-align="full"] {
+		min-width: calc(1440px - 2rem);
+	}
+
+	.edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .c9-grid.p-2 .container-fluid[data-align="full"] {
+		min-width: calc(1440px - 1rem);
+	}
+
+	.edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .c9-grid.p-1 .container-fluid[data-align="full"] {
+		min-width: calc(1440px - .5rem);
+	}
+
+	.edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .c9-grid.p-0 .container-fluid[data-align="full"] {
+		min-width: 1440px;
+	}
+}
+
 /* Grid gap classes */
 
 .c9-block-layout-column-gap-0>.block-editor-inner-blocks>.block-editor-block-list__layout {
